<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000000"
    android:backgroundTint="#000000"
    android:backgroundTintMode="src_in"
    android:visibility="visible"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button5"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="247dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="78dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="#000000"
        android:backgroundTintMode="screen"
        android:foregroundTint="#FFFFFF"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plus"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="#000000"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="67dp"
        android:layout_height="84dp"
        android:layout_marginStart="321dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="134dp"
        android:backgroundTint="#000000"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="66dp"
        android:layout_height="84dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="617dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="#000000"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="247dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="134dp"
        android:backgroundTint="#000000"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="68dp"
        android:layout_height="78dp"
        android:layout_marginStart="247dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="327dp"
        android:backgroundTint="#000000"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="66dp"
        android:layout_height="78dp"
        android:layout_marginStart="319dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="328dp"
        android:backgroundTint="#000000"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <Button
        android:id="@+id/minus"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="93dp"
        android:layout_height="89dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="274dp"
        android:backgroundTint="#000000"
        android:text="@string/minus"
        android:textAlignment="inherit"
        android:textColor="#FF5722"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <Button
        android:id="@+id/plus"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="93dp"
        android:layout_height="88dp"


        android:layout_marginStart="26dp"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="316dp"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/plus"
        android:textColor="#FF5722"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/multiply"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="93dp"
        android:layout_height="89dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/x"
        android:textColor="#FF5722"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/divide"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="93dp"
        android:layout_height="87dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/divide"
        android:textColor="#FF5722"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.949" />

    <Button
        android:id="@+id/button0"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="69dp"
        android:layout_height="77dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="42dp"
        android:backgroundTint="#000000"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/equal"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="98dp"
        android:layout_height="107dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF5722"
        android:text="@string/equals"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="333dp"
        android:layout_height="32dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="664dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="175dp"

        android:layout_marginStart="11dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="439dp"
        android:fontFamily="@font/cousine_bold"
        android:textAlignment="textEnd"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="427dp"
        android:backgroundTint="#208CE3"
        android:text="@string/clear1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/clear"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="427dp"
        android:backgroundTint="#2196F3"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="697dp" />

</androidx.constraintlayout.widget.ConstraintLayout>